2013-10-25 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/massive/massive_copy_modules.php,
	include/functions_modules.php: fixed the module massive copy from
	agent with remote configuration to agent without remote
	configuration and with a network module.

2013-10-24  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/module_manager_editor_common.php: Store the 
	interval factor in modules edition when is policy form and other
	improvements. Incident #303

2013-10-23 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_api.php: fixed the get events filtered by the
	group in the parameters.

2013-10-22 Hirofumi Kosaka <kosaka@rworks.jp>
        
        * include/ajax/module.php: changed the code to avoid to try to
          load enterprise code unconditionally.

2013-10-21 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_api.php: applied the path from
	"http://sourceforge.net/p/pandora/bugs/2395/", thanks Jorge Loza.
	
	MERGED FROM THE BRANCH PANDORA_4.0

2013-10-17 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/agentes/configurar_agente.php: fixed the string of
	duplicate module.

2013-10-17 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/setup/gis_step_2.php: fixed typo bug.

2013-10-16  Sergio Martin <sergio.martin@artica.es>

	* godmode/setup/setup_netflow.php: Fix aesthetic issues

2013-10-16 Miguel de Dios <miguel.dedios@artica.es>

	* extensions/update_manager/main.php: fixed the javascript bugs
	about the new version of jquery.

2013-10-16 Miguel de Dios <miguel.dedios@artica.es>

	* include/api.php: checking the update manager, sorry.

2013-10-16 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/agentes/configurar_agente.php,
	include/functions_network_components.php,
	include/functions_alerts.php: fixed the name of items to duplicate,
	now they have a html entities for whitespaces.

2013-10-16  Sergio Martin <sergio.martin@artica.es>

	* include/javascript/jquery.pandora.js